--- a/style.css
+++ b/style.css
@@ -83,16 +83,16 @@ nav{
 /*Main*/
 
 .article{
-    width: 98vw;
+    width: 100%;
     height: 85vh;
     text-align: center;
-    padding-top: 20px;
+    margin-top: 20px;
     background-color: var(--secundary);
 }
 
 .title{
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
     color: var(--primary);
 }
 
@@ -100,7 +100,7 @@ nav{
     padding-top: 30px;
     display: flex;
     flex-direction: row;
-    margin: auto;
+    margin-left: 2vw;
 }
 
 .conteudo .txt1{
@@ -122,5 +122,45 @@ nav{
     height: 300px;
     margin-top: 150px;
     border-radius: 50%;
-    margin-left: 15%;
+    margin-left: 10%;
 }
+
+.pj{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    margin-top: 20px;
+    padding-top: 20px;
+}
+
+.conteudo .pj .img-link{
+    background-image: url(assets/WH.png);
+    width: 300px;
+    height: 200px;
+    background-size: cover;
+    margin: auto;
+    transition: 0.4s all ease;
+    border-radius: 6px;
+}
+
+.conteudo .pj .img-link:hover{
+   height: 220px;
+   width: 320px;
+   cursor: pointer;
+   box-shadow: 5px 0px 5px white;
+}
+
+.conteudo .pj h2{
+    color: var(--primary);
+    padding: 10px 0;
+}
+
+.conteudo .pj p {
+    color: rgb(255, 255, 255);
+    width: 420px;
+    text-align: justify;
+    padding: 0 10px;
+    margin: auto;
+}
+
