--- a/style.css
+++ b/style.css
@@ -2,13 +2,14 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Quantum', 'sans-serif';
 }
 
 :root{
     --primary: #ffe400;
     --secundary: #333333;
     --alternative: #444444;
+    --principal: 'Quantum', 'sans-serif';
+    --second: Arial, Helvetica, sans-serif
 }
 
 body{
@@ -22,6 +23,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    font-family: var(--principal);
 }
 header nav a{
     color: var(--secundary);
@@ -82,6 +84,7 @@ nav{
     align-items: center;
     text-align: center;
     justify-content: center;
+    font-family: var(--principal);
 }
 
 .title-principal{
@@ -111,6 +114,7 @@ nav{
     text-align: center;
     margin-top: 20px;
     background-color: var(--secundary);
+    font-family: var(--principal);
 }
 
 .title{
@@ -201,11 +205,12 @@ nav{
 /*Orçamento*/
 
 .orcamento{
-    width: 100%;
-    height: 85vh;
+    width: 101%;
+    height: 100vh;
     text-align: center;
     margin-top: 20px;
     background-color: #fff;
+    font-family: var(--principal);
 }
 
 .orcamento-container{
@@ -232,7 +237,7 @@ nav{
 }
 
 form .label{
-    height: 10%;
+    height: 7%;
     width: 95%;
     margin-top: 10px;
     border: 1px solid black;
@@ -252,6 +257,26 @@ form .mensagem{
     font-size: 25px;
     border-radius: 5px;
     text-align: justify;
+}
+
+.button-send{
+    background-color: var(--primary);
+    color: var(--secundary);
+    padding: 5px;
+    border-radius: 10px;
+    transition: 0.3s all ease;
+    opacity: 1;
+    cursor: pointer;
+    margin-top: 10px;
+    font-family: var(--principal);
+    box-shadow: 2px 2px black;
+    width: 100px;
+    height: 30px;
+    text-transform: uppercase;
+}
+
+.button-send:hover{
+    opacity: 0.8;
 }
 
 .contacts{
@@ -299,4 +324,42 @@ form .mensagem{
 
 .box a:hover{
     opacity: 0.7;
+}
+
+/*Footer*/
+
+footer{
+    text-align: center;
+    color: var(--primary);
+    background-color: var(--secundary);
+    height: 80px;
+    width: 99vw;
+    font-family:  'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+footer p{
+    margin-top: 10px;
+}
+
+footer .socials-footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.socials-footer .footer-img{
+    width: 20px;
+    height: 20px;
+    margin: 0px 3px;
+    cursor: pointer;
+}
+
+.socials-footer #insta{
+    background-image: url(assets/icons-insta.png);
 }
