--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -8,8 +11,8 @@
     --primary: #ffe400;
     --secundary: #333333;
     --alternative: #444444;
-    --principal: 'Quantum', 'sans-serif';
-    --second: Arial, Helvetica, sans-serif
+    --principal: 'Alumni Sans Pinstripe', sans-serif;
+    --second: 'Quantico', sans-serif;
 }
 
 body{
@@ -32,11 +35,13 @@ header nav a{
 
 #title1{
     visibility: visible;
+    font-family: var(--second);
 }
 
 #title2{
     overflow: hidden;
     visibility: hidden;
+    font-family: var(--second);
 }
 
 .link{
@@ -62,6 +67,7 @@ header nav a{
         overflow: visible;
         margin-left: 50%;
         font-size: 30px;
+        font-family: var(--second);
     }
 }
 
@@ -72,6 +78,9 @@ nav{
     align-items: center;
     background: var(--primary);
     height: 8vh;
+    position: fixed;
+    width: 100vw;
+    z-index: 2;
 }
 .nav-list{
     list-style: none;
@@ -80,6 +89,7 @@ nav{
 .nav-list li{
     letter-spacing: 3px;
     margin-left: 32px;
+    font-family: var(--second);
 }
 .mobile-menu{
     display: none;
@@ -111,7 +121,7 @@ nav{
     align-items: center;
     text-align: center;
     justify-content: center;
-    font-family: var(--principal);
+    font-family: var(--second);
 }
 
 .title-principal{
@@ -157,7 +167,7 @@ nav{
     text-align: center;
     margin-top: 20px;
     background-color: var(--secundary);
-    font-family: var(--principal);
+    font-family: var(--second);
 }
 .article2{
     width: 100%;
@@ -165,17 +175,19 @@ nav{
     text-align: center;
     margin-top: 20px;
     background-color: var(--secundary);
-    font-family: var(--principal);
+    font-family: var(--second);
 }
 
 .title{
+    padding-top: 20px;
     text-align: center;
     font-size: 50px;
     color: var(--primary);
+    text-shadow: 2px 2px 2px black;
+    font-family: var(--second);
 }
 
 .conteudo{
-    padding-top: 30px;
     display: flex;
     flex-direction: row;
     margin-left: 2vw;
@@ -201,16 +213,22 @@ nav{
     margin-top: 150px;
     border-radius: 50%;
     margin-left: 10%;
-    z-index: 1;
+    z-index: 0;
 }
 #bola2{
-    background-color: var(--primary);
+    z-index: 1;
     width: 300px;
     height: 300px;
     margin-top: 150px;
     border-radius: 50%;
-    margin-left: -20%;
-    z-index: 0;
+    margin-left: -22%;
+    border-radius: 50%;
+}
+
+#bola2 img{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
 }
 
 .pj{
@@ -251,6 +269,8 @@ nav{
     text-align: justify;
     padding: 0 10px;
     margin: auto;
+    font-family: var(--principal);
+    font-size: 25px;
 }
 
 @media (max-width: 1060px){
@@ -278,7 +298,8 @@ nav{
         margin-left: 80px;
     }
     .article2{
-        height: 1200px;
+        margin-top: 250px;
+        height: 1400px;
     }
 }
 
@@ -289,7 +310,7 @@ nav{
     height: 100vh;
     text-align: center;
     margin-top: 20px;
-    background-color: #fff;
+    background-color: rgba(248, 248, 248, 0.96);
     font-family: var(--principal);
 }
 
@@ -322,9 +343,10 @@ form .label{
     margin-top: 10px;
     border: 1px solid black;
     background-color: #fff;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: var(--principal);
     font-size: 25px;
     border-radius: 5px;
+    padding: 3px 0 3px 5px
 }
 
 form .mensagem{
@@ -336,7 +358,7 @@ form .mensagem{
     font-family: 'Courier New', Courier, monospace;
     font-size: 25px;
     border-radius: 5px;
-    text-align: justify;
+    text-align: center;
 }
 
 .button-send{
@@ -353,6 +375,7 @@ form .mensagem{
     width: 100px;
     height: 30px;
     text-transform: uppercase;
+    font-family: var(--second);
 }
 
 .button-send:hover{
@@ -390,7 +413,7 @@ form .mensagem{
     justify-content: center;
     align-items: center;
     margin-left: 2vw;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: var(--principal);
     font-size: 30px;
 }
 
@@ -408,7 +431,7 @@ form .mensagem{
 
 @media (max-width: 1060px){
     .orcamento{
-        height: 800px;
+        height: 850px;
     }
     .orcamento-container{
         flex-direction: column;
