--- a/style.css
+++ b/style.css
@@ -22,25 +22,23 @@ body{
 
 /*HEADER*/
 header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+    width: 101.05%;
+    height: 10vh;
     font-family: var(--principal);
+    background-color: var(--primary);
+    display: flex;
+    flex-direction: row;
+    z-index: 3;
+    position: fixed;
 }
-header nav a{
-    color: var(--secundary);
-    text-decoration: none;
+.title-1{
+    margin-left: 20px;
 }
 
 #title1{
+    color: var(--secundary);
+    text-decoration: none;
     visibility: visible;
-    font-family: var(--second);
-}
-
-#title2{
-    overflow: hidden;
-    visibility: hidden;
     font-family: var(--second);
 }
 
@@ -59,15 +57,11 @@ header nav a{
     opacity: 1;
 }
 @media (max-width: 1060px){
-    #title1{
-       visibility: hidden;
+    .title-1{
+        margin-top: 3px;
     }
-    #title2{
-        visibility: visible;
-        overflow: visible;
-        margin-left: 50%;
-        font-size: 30px;
-        font-family: var(--second);
+    #title1{
+        font-size: 20px;
     }
 }
 
@@ -76,11 +70,9 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: var(--primary);
     height: 8vh;
-    position: fixed;
     width: 100vw;
-    z-index: 2;
+    margin-right: 20%;
 }
 .nav-list{
     list-style: none;
@@ -98,14 +90,60 @@ nav{
 .mobile-menu div {
     width: 32px;
     height: 2px;
-    background: #fff;
+    background: var(--secundary);
     margin: 8px;
 }
 
 @media (max-width: 1060px){
-    .nav-list{
-        visibility: hidden;
+    nav{
+        margin-right: 0;
     }
+    .nav-list {
+        position: absolute;
+        top: 8vh;
+        right: 0;
+        width: 50vw;
+        height: 92vh;
+        background: var(--primary);
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(100%);
+        border-radius: 0 0 0 3px;
+    }
+    .nav-list li{
+        margin-left: 0;
+        opacity: 0;
+    }
+    .mobile-menu{
+        display: block;
+        margin-left: 55%;
+    }
+}
+
+.nav-list.active {
+    transform: translateX(0);
+}
+
+@keyframes navLinkFade {
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0);
+    }
+    
+}
+.mobile-menu.active .line1{
+    transform: rotate(-45deg) translate(-8px, 8px);
+}
+.mobile-menu.active .line2{
+    opacity: 0;
+}
+.mobile-menu.active .line3{
+    transform: rotate(-45deg) translate(-5px, 7px);
 }
 
 
@@ -239,6 +277,9 @@ nav{
     margin-top: 20px;
     padding-top: 20px;
     margin: auto;
+}
+#contador {
+    background-image: url(assets/cont.png);
 }
 
 .conteudo .pj .img-link{
@@ -431,7 +472,7 @@ form .mensagem{
 
 @media (max-width: 1060px){
     .orcamento{
-        height: 850px;
+        height: 550px;
     }
     .orcamento-container{
         flex-direction: column;
@@ -444,7 +485,8 @@ form .mensagem{
         border-radius: 10px;
     }
     .contacts{
-        height: 30vh;
+        visibility: hidden;
+        height: 0vh;
         width: 90%;
         margin: auto;
         display: flex;
